--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  margin: 0;
+  font-family: 'Times New Roman', sans-serif;
+}
+
+.container{
+  background-color: #282d35;
+}
+
+.navbar{
+  display: flex;
+  align-items: center;
+  padding: 30px 25px;
+  height: 90px;
+  color: rgb(207, 212, 218);
+  background-color: #21222A;
+}
+
+.navbar > h3, .navbar > h4{
+  margin: 0;
+}
+
+.navbar > h3{
+  margin-right: auto;
+  color: #61dafb;
+  font-weight: 700;
+  font-size: 22px;
+}
+.navbar > h4{
+  color: #deebf8;
+  font-weight: 600;
+}
+
+.navbar > img{
+  height: 60px;
+  margin-right: 12px;
+}
+.main-contents{
+  color: antiquewhite;
+  padding: 57px 27px;
+  
+}
+
+
+
+.fun{
+  margin: 0;
+  letter-spacing: -0.05em;
+  font-size: 39px;
+}
+
+.list {
+  margin-top: 46px;
 }
